# cider

./: README.md  package.json
docs/: TAURI_MIGRATION.md
electron/: discord.cjs  launch.cjs  main.cjs  package.json  pnpm-lock.yaml  preload.cjs  server.cjs  token.cjs
scripts/: check-electron.mjs  dev-shell.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: discord.rs  lib.rs  main.rs  token.rs
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.vue  main.ts
ui/src/components/: CollectionPage.vue  CommandPalette.vue  Icon.vue  MediaShelf.vue  MediaTile.vue  NowPlaying.vue  PlayBar.vue  QueuePanel.vue  Sidebar.vue  TitleBar.vue  TrackList.vue
ui/src/lib/: api.ts  artwork.ts  lyrics.ts  mediakeys.ts  musickit.ts  presence.ts  tauri.ts  time.ts
ui/src/router/: index.ts
ui/src/stores/: player.ts  settings.ts  stats.ts
ui/src/styles/: base.css
ui/src/types/: cider-bridge.d.ts  musickit.d.ts
ui/src/views/: AlbumView.vue  ArtistView.vue  BrowseView.vue  HomeView.vue  LibraryView.vue  PlaylistView.vue  RadioView.vue  SearchView.vue  SettingsView.vue  StatsView.vue
