[package]
name = "cider"
version = "2.0.0"
description = "Cider — a delightful cross-platform Apple Music client, powered by Tauri"
authors = ["Cider Collective <development@cider.sh>"]
license = "AGPL-3.0"
repository = "https://github.com/ciderapp/Cider"
edition = "2021"
rust-version = "1.77"

[lib]
name = "cider_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
discord-rich-presence = "0.2"
base64 = "0.22"
urlencoding = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
